--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,28 @@
 <html>
 <head>
     <title>{% block title %}IP Lookup{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <div class="navbar">
-        <a href="{{ url_for('index') }}" class="logo">🌍 IP Lookup</a>
-        <div class="nav-links">
-            <a href="{{ url_for('view_stats') }}">Statistics</a>
-            <a href="{{ url_for('view_cache') }}">Cache</a>
-            <a href="{{ url_for('list_results') }}">Files</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold text-primary" href="{{ url_for('index') }}">🌍 IP Lookup</a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('view_stats') }}">Statistics</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('view_cache') }}">Cache</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('list_results') }}">Files</a></li>
+                </ul>
+            </div>
         </div>
+    </nav>
+
+    <div class="container">
+        {% block content %}{% endblock %}
     </div>
-    {% block content %}{% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
