--- a/templates/results.html
+++ b/templates/results.html
@@ -13,7 +13,8 @@
 </div>
 
 {% if files %}
-<table class="table table-striped">
+<div class="card p-4 shadow-sm">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
             <th>Filename</th>
@@ -37,8 +38,9 @@
         {% endfor %}
     </tbody>
 </table>
+</div>
 {% else %}
-<div class="empty">
+<div class="card p-4 shadow-sm empty">
     <p>No processed files found.</p>
     <p><a href="/">Upload some CSV files to get started</a></p>
 </div>
