Adjust highlight rule

--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,6 @@ a {
     text-decoration: none;
 }
 
-.table-striped tbody tr.likely-fake-row,
-.table-hover tbody tr.likely-fake-row {
+.likely-fake-row {
     background-color: #ffe6e6 !important;
 }
