--- a/static/style.css
+++ b/static/style.css
@@ -15,5 +15,5 @@ a {
 .likely-fake-row,
 .likely-fake-row>td,
 .likely-fake-row>th {
-    background-color: #ffe6e6 !important;
+    background-color: #ed8b8b !important;
 }
