--- a/templates/index.html
+++ b/templates/index.html
@@ -121,36 +121,32 @@
         `;
 
         try {
-            const response = await fetch('/upload', {
+            const startResp = await fetch('/upload', {
                 method: 'POST',
                 body: formData
             });
 
-            const reader = response.body.getReader();
-            const decoder = new TextDecoder();
-            let buffer = '';
-
-            while (true) {
-                const { done, value } = await reader.read();
-                if (done) break;
-
-                buffer += decoder.decode(value, { stream: true });
-                const lines = buffer.split('\n');
-                buffer = lines.pop();
-
-                for (const line of lines) {
-                    if (line.startsWith('data: ')) {
-                        try {
-                            const data = JSON.parse(line.slice(6));
-                            updateProgress(data);
-                        } catch (e) {}
-                    }
-                }
+            const startData = await startResp.json();
+            if (!startResp.ok) {
+                throw new Error(startData.error || 'Upload failed');
             }
+
+            const evtSource = new EventSource(`/stream/${startData.job_id}`);
+            evtSource.onmessage = function(e) {
+                try {
+                    const data = JSON.parse(e.data);
+                    updateProgress(data);
+                    if (data.type === 'complete') {
+                        evtSource.close();
+                    }
+                } catch (err) {}
+            };
+            evtSource.onerror = function() {
+                evtSource.close();
+            };
 
         } catch (error) {
             resultDiv.innerHTML = `<div class="result" style="color: red;">Error: ${error.message}</div>`;
-        } finally {
             isProcessing = false;
             unblockNavigation();
             uploadButton.disabled = false;
