--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+    <nav class="navbar navbar-expand-lg navbar-light glass-nav mb-4">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="{{ url_for('index') }}">🌍 IP Lookup</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
